SFDCProject/src/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Home_type_on_title__c</fullName>
        <inlineHelpText>Building classification recorded on the home title in county records</inlineHelpText>
        <label>Home Type on Title</label>
        <picklist>
            <picklistValues>
                <fullName>SFR (Single Family Residence)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONDOMINIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUPLEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTI FAMILY DWELLING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMERCIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDUSTRIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (PERMITTED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOWNHOUSE / ROWHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (NOT PERMITTED)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Homeowner_Address__c</fullName>
        <description>The homeowner&apos;s address (where the array(s) will be built).</description>
        <label>Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Homeowner_Alternate_Phone__c</fullName>
        <description>The homeowner&apos;s secondary phone number.</description>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Homeowner_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Homeowner_Name__c</fullName>
        <description>The name of the homeowner for the proposal generated.</description>
        <label>Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_Phone__c</fullName>
        <description>The homeowner&apos;s primary phone number.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Implied_Financing_Rate__c</fullName>
        <description>The rate of implied financing.</description>
        <label>Implied Financing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implied_kWh_rate_lease__c</fullName>
        <label>Implied kWh rate (lease)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indexed_Contract_Value__c</fullName>
        <label>Indexed Contract Value</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Term_Avg_kWh_Rate__c</fullName>
        <description>Initial term price per kWh including upfront payment</description>
        <inlineHelpText>Initial term price per kWh including upfront payment</inlineHelpText>
        <label>Initial Term Avg kWh Rate</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Partner_Name__c</fullName>
        <formula>Install_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Adders_per_Watt__c</fullName>
        <description>Charges for adders, added to &quot;Installer Cost per Watt&quot; to get total EPC price</description>
        <inlineHelpText>Charges for adders, added to &quot;Installer Cost per Watt&quot; to get total EPC price</inlineHelpText>
        <label>Installation Adders per Watt</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_Price__c</fullName>
        <label>Installation Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <label>Installation Type</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_age__c</fullName>
        <label>Installation age</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installer_Cost_per_Watt__c</fullName>
        <description>Base price paid to installer, does not include adders</description>
        <inlineHelpText>Base price paid to installer, does not include adders</inlineHelpText>
        <label>Installer Cost per Watt</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Usage__c</fullName>
        <label>January Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_kWh__c</fullName>
        <description>The total amount of kWh used in January pre-solar.</description>
        <label>January kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Usage__c</fullName>
        <label>July Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_kWh__c</fullName>
        <description>The total amount of electricity consumed in July pre-solar.</description>
        <label>July kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Usage__c</fullName>
        <label>June Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_kWh__c</fullName>
        <description>The total amount of electricity consumed in June pre-solar.</description>
        <label>June kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Large_System_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large System Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Systems_Check1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large Systems Check1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Systems_Check2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large Systems Check2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Signed_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Customer Signed Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Proposals (Last Customer Signed Proposal)</relationshipLabel>
        <relationshipName>SignedProposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Generated_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Generated Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <formula>Opportunity__r.Lead_Created_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Promotion_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Promotion Id</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT( Opportunity__r.Lead_Source_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Agreement__c</fullName>
        <description>The duration of the agreement.</description>
        <label>Length of Agreement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Living_Space_Square_Footage__c</fullName>
        <label>Living Space Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Expired__c</fullName>
        <formula>IF( TODAY() &gt; ExpirationDate__c, True, False)</formula>
        <label>Loan Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Rebate__c</fullName>
        <description>The amount for any local rebate, where applicable.</description>
        <label>Local Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <description>[Requested in TG-962, subtask of TG-904]</description>
        <label>Lot Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Shading_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Shading Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mar_Usage__c</fullName>
        <label>March Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_kWh__c</fullName>
        <description>The total amount of electricity consumed in March pre-solar.</description>
        <label>March kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marked_As_Sold__c</fullName>
        <description>The date this proposal was marked as sold. Note that this field does not represent the date that the generation asset was created, the date the opportunity signed the agreement, or the date that the deal was processed.</description>
        <inlineHelpText>The date this proposal was marked as sold.</inlineHelpText>
        <label>Marked As Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marked_For_Deletion__c</fullName>
        <label>Marked For Deletion</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Escalator__c</fullName>
        <description>The maximum rate at which the monthly bill value escalates by year for PowerPlan.</description>
        <label>Max Escalator</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount__c</fullName>
        <label>Max Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_kWh_Rate__c</fullName>
        <description>The maximum kWh rate for PowerPlan.</description>
        <label>Maximum kWh Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Usage__c</fullName>
        <label>May Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_kWh__c</fullName>
        <description>The total amount of electricity consumed in May pre-solar.</description>
        <label>May kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Cash_Purchase_Price__c</fullName>
        <label>Minimum Cash Purchase Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mode_Name__c</fullName>
        <description>The unique name of the proposal mode in which this proposal was issued. A mode is a financial model constructed by the Proposal Engine for a given set of circumstances (eg. a particular partner, geography, rebate structure, or other deal situation as determined by the sales rep or channel manager)</description>
        <label>Mode Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modules_Price__c</fullName>
        <label>Modules Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modules__c</fullName>
        <label>Modules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Proposal_Created__c</fullName>
        <formula>CASE(
MONTH(Created_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Proposal Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Bill_Year_25__c</fullName>
        <description>The amount of the monthly bill in year 25.</description>
        <label>Monthly Bill Year 25</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_SunRun_Bill__c</fullName>
        <description>The expected monthly bill for this proposal. If the agreement is a lease, then this is the base lease payment before escalation.  If it is a PPA, this is the average solar electricity bill over the length of the contract.</description>
        <inlineHelpText>The expected monthly bill for this proposal.</inlineHelpText>
        <label>Monthly SunRun Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Upfront_Payment_Amount__c</fullName>
        <label>Monthly Upfront Payment Amount`</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_solar_prod_ratio__c</fullName>
        <label>Monthly solar prod ratio</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_solar_production__c</fullName>
        <label>Monthly solar production</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>My_Company_Proposals__c</fullName>
        <formula>Sales_Partner_Name__c = Sales_Rep_Account_Name__c</formula>
        <label>My Company Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Proposal__c</fullName>
        <formula>If(
OR(($User.Email = Sales_Rep_Email__c), ($User.Id = Assigne__r.Id)),
TRUE, FALSE)</formula>
        <label>My Proposal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPV_incl_O_M_costs__c</fullName>
        <description>The net present value, including operations and maintenance costs, for PowerPlan.</description>
        <label>NPV (incl O&amp;M costs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_on_Credit_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name on Credit Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_on_Credit__c</fullName>
        <formula>if(OR(TEXT(Current_Customer_Credit_Report__r.Sunrun_Credit_Status__c) == &apos;PASS&apos;, TEXT(Current_Customer_Credit_Report__r.Sunrun_Credit_Status__c) == &apos;CPASS&apos;),
(If(Current_Customer_Credit_Report__r.First_Name__c != null, Current_Customer_Credit_Report__r.First_Name__c, &apos;&apos;) + &apos; &apos; + If(Current_Customer_Credit_Report__r.Last_Name__c != null, Current_Customer_Credit_Report__r.Last_Name__c, &apos;&apos;)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name on Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_title__c</fullName>
        <inlineHelpText>Name recorded on the home title in county records</inlineHelpText>
        <label>Name on Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Generation__c</fullName>
        <description>To be used by Order Management to generate NEM documents through Drawloop.</description>
        <formula>Estimated_Annual_Production__c-Total_Energy_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be used by Order Management to generate NEM documents through Drawloop.</inlineHelpText>
        <label>Net Generation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Deal__c</fullName>
        <formula>AND (Revised_Proposal__c = False, Change_Order__c = False)</formula>
        <label>New Deal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_With_Utility_Bills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Home With Utility Bills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_Without_Utility_Bills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Home Without Utility Bills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Node Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any notes pertaining to the homeowner&apos;s proposal.</description>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nov_Usage__c</fullName>
        <label>November Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_kWh__c</fullName>
        <description>The total amount of electricity consumed in November pre-solar.</description>
        <label>November kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Arrays__c</fullName>
        <description>The number of arrays on the given solar system, 1-99.</description>
        <inlineHelpText>The number of arrays on the given solar system, 1-99.</inlineHelpText>
        <label>Number Of Arrays</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Bank_Approval_Documents__c</fullName>
        <label>Number of Active Bank Approval Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Appointments__c</fullName>
        <formula>Opportunity__r.Number_of_Appointments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inverters__c</fullName>
        <description>The total number of inverters for the system.</description>
        <label>Number of Inverters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Meters__c</fullName>
        <label>Number of Meters</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Free__c</fullName>
        <description>For promotions, the number of months the customer will get free</description>
        <inlineHelpText>For promotions, the number of months the customer will get free</inlineHelpText>
        <label>Number of Months Free</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Panels__c</fullName>
        <label>Number of Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Proposals__c</fullName>
        <formula>Opportunity__r.Number_of_Proposals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sunrun_Owned_Panels__c</fullName>
        <label>Number of Sunrun-Owned Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Usage__c</fullName>
        <label>October Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_kWh__c</fullName>
        <description>The total amount of electricity consumed in October pre-solar.</description>
        <label>October kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityIdText__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityIdText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_AccountID__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <label>Opportunity AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Deal_Id__c</fullName>
        <formula>Opportunity__r.Deal_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_External_Id__c</fullName>
        <formula>Opportunity__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Install_Branch__c</fullName>
        <formula>Opportunity__r.Install_Branch_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Install Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Install_Partner__c</fullName>
        <formula>Opportunity__r.Install_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Install Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Opportunity custom page link for partner portal user</description>
        <formula>IF( CONTAINS(LEFT($Api.Partner_Server_URL_210, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_210)), &apos;sunrun&apos;) , HYPERLINK(&quot;/partner/apex/partneropportunitycreate?id=&quot;&amp; Opportunity__r.Id,  Opportunity__r.Name,&quot;_self&quot;), HYPERLINK(&quot;/apex/partneropportunitycreate?id=&quot;&amp; Opportunity__r.Id,  Opportunity__r.Name,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_StageName__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <label>Opportunity StageName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The opportunity for which this proposal was issued</description>
        <inlineHelpText>The opportunity for which this proposal was issued</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ops_Initial_Processing_Cycle_Time__c</fullName>
        <formula>(Date_Time_Finance_Received_Proposal__c -  Date_Time_SR_Ops_Received__c)*24</formula>
        <label>Ops Initial Processing Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ops_Pick_Up_Cycle_Time__c</fullName>
        <formula>(Date_Time_SR_Ops_Received__c -  Date_Time_Submitted__c ) * 24</formula>
        <label>Ops Pick-Up Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ops_Signoff_Cycle_Time__c</fullName>
        <formula>(SR_Signoff__c -  Date_Time_Ops_Received_Proposal_back__c) *24</formula>
        <label>Ops Signoff Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Proposal_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the proposal ID that the change order was created from</description>
        <label>Original Proposal ID</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Proposal_SR_Signoff__c</fullName>
        <formula>Original_Proposal_ID__r.SR_Signoff__c</formula>
        <label>Original Proposal SR Signoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Proposal_Stage_Formula__c</fullName>
        <formula>Original_Proposal_ID__r.Original_Proposal_Stage_Text__c</formula>
        <label>Original Proposal Stage2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Proposal_Stage_Text__c</fullName>
        <label>Original Proposal Stage1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Proposal_Stage__c</fullName>
        <formula>TEXT(Original_Proposal_ID__r.Stage__c)</formula>
        <label>Original Proposal Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Proposal_Submitted_By_Email__c</fullName>
        <formula>IF(ISBLANK( Original_Proposal_ID__c ), Submitted_By__r.Email, Original_Proposal_ID__r.Submitted_By__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Proposal Submitted By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Proposal_Welcome_Email_Sent__c</fullName>
        <formula>Original_Proposal_ID__r.Welcome_Email_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Proposal Welcome Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Proposal__c</fullName>
        <formula>Original_Proposal_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Proposal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_PPA_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If master mode was used, do you want to override the ppa rate?</description>
        <inlineHelpText>If master mode was used, do you want to override the ppa rate?</inlineHelpText>
        <label>Override PPA Rate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Upfront__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you want to override the upfront payment?</description>
        <inlineHelpText>If master mode was used, was upfront override selected?</inlineHelpText>
        <label>Override Upfront?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_of_RECs_or_SRECs__c</fullName>
        <description>[Requested in NEST-54]</description>
        <inlineHelpText>Owner of the RECs or SRECs</inlineHelpText>
        <label>Owner of RECs or SRECs</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Name_Plate__c</fullName>
        <formula>System_Size_STC_DC__c /  Total_No_Panels__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel Name Plate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Proposal_Id__c</fullName>
        <label>Parent Proposal Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Actions__c</fullName>
        <label>Partner Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Ready for Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Addition_to_Upfront__c</fullName>
        <label>Partner Addition to Upfront</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Entered_System_Price__c</fullName>
        <label>Partner Entered System Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Financed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Financed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Guaranteed_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Guaranteed Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>The name of the partner using the proposal - one partner may have many modes.</description>
        <inlineHelpText>The name of the partner using the proposal - one partner may have many modes.</inlineHelpText>
        <label>Partner Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payback__c</fullName>
        <description>Total years required to payback investment into Power Plan</description>
        <inlineHelpText>Total years required to payback investment into Power Plan</inlineHelpText>
        <label>Payback</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Comments__c</fullName>
        <label>Pending Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Notes__c</fullName>
        <label>Pending Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>